<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="false"
    android:background="#FDDEB7"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/content">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="10dp"
            app:srcCompat="@drawable/logodell" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="35dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:layout_marginBottom="100px"
            android:breakStrategy="simple"
            android:bufferType="normal"
            android:fontFamily="@font/poppins_medium"
            android:foregroundTintMode="add"
            android:text="@string/tu_bienestar_tu_vida_vamos_juntos"
            android:textAlignment="center"
            android:textSize="24sp"
            app:autoSizeTextType="none"
            tools:ignore="Deprecated,TextViewEdits" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100px"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text1"
            android:textAlignment="center"
            android:textSize="20sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="TuCorreo@gmail.com">

            <EditText
                android:id="@+id/editTextTextEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/edittext_border"
                android:ems="10"
                android:fontFamily="@font/poppins_semibold"
                android:textColor="#161616"
                android:inputType="textEmailAddress"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:onClick="onEditTextClick" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30px"
            android:backgroundTint="#19706F"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/button1"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30px"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text2"
            android:textAlignment="center"
            android:textSize="16sp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3b5998"
            android:drawableLeft="@drawable/logofacebook"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/button2"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100px"
            android:backgroundTint="#FDFBFB"
            android:drawableLeft="@drawable/googlelogo1"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/button3"
            android:textColor="#000000"
            app:iconTintMode="add"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/text3"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60px"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text4"
            android:textAlignment="center"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#19706F"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/button4" />

        <TextView
            android:id="@+id/textResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="¡Haz click para crear tu cuenta en LikeLife !" />
    </LinearLayout>





</androidx.constraintlayout.widget.ConstraintLayout>